feat: refactor passkey credential handling and improve user association logic